// Use DBML to define your database structure
// Docs https//dbml.dbdiagram.io/docs

Table Role {
  id varchar [primary key]
  description text
}

Table User {
  id varchar [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  password varchar
  role_id varchar
  disabled boolean
  bio text
  age integer
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: User.role_id > Role.id
Ref: User.created_by_id > User.id
Ref: User.updated_by_id > User.id

Table Team {
  id integer [primary key]
  name varchar
  year_foundation int
  city varchar
  created_by_id integer
  created_at timestamp
  updated_by_id integer
  updated_at timestamp
}

Ref: Team.created_by_id > User.id
Ref: Team.updated_by_id > User.id

Table Player {
  id integer [primary key]
  name varchar
  birth_date timestamp
  player_role_id integer
  created_by_id integer
  created_at timestamp
  updated_by_id integer
  updated_at timestamp
}

Ref: Player.created_by_id > User.id
Ref: Player.updated_by_id > User.id

Table PlayerRole {
  id integer [primary key]
  name varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Player.player_role_id > PlayerRole.id
Ref: PlayerRole.created_by_id > User.id
Ref: PlayerRole.updated_by_id > User.id

Table History {
  id integer [primary key]
  team_id integer
  player_id integer
  start_date timestamp
  end_date timestamp
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp

  Indexes {
    (team_id, player_id, start_date, end_date) [unique]
  }
}

Ref: History.team_id > Team.id
Ref: History.player_id > Player.id
Ref: History.created_by_id > User.id
Ref: History.updated_by_id > User.id
